manifests/deployment/production/reminders-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: reminders-api-svc
  name: reminders-api-svc
  namespace: reminders-main
spec:
  ports:
    - name: api-port
      port: 8080
      targetPort: 5001
      protocol: TCP
  selector:
    app: reminders-api
    tier: backend
status:
  loadBalancer: {}
